--- a/Catalog.css
+++ b/Catalog.css
@@ -1,13 +1,14 @@
-body
-{
+body {
     background-image: url("Images/Фон.jpg");
     background-repeat: no-repeat;
 }
+
 h1 {
     text-align: center;
     color: white;
     margin-top: 0;
 }
+
 ul {
     background-color: red;
     /*height: 45px;*/
@@ -28,6 +29,7 @@ li:hover {
     color: green;
     box-shadow: 5px 1px 0;
     padding-bottom: 2px;
+
 }
 
 ul > li {
@@ -38,67 +40,85 @@ a {
     text-decoration: none;
     color: white
 }
-header{
+
+header {
     width: 100%;
 }
 
 
-.main-nav{
+.main-nav {
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
     min-height: 60px;
 }
 
-.main-nav > *{
+.main-nav > * {
     /*flex-grow: 1;*/
     display: block;
 }
 
-.nav-link{
+.nav-link {
     width: 100%;
     height: 100%;
     display: flex;
     justify-content: center;
 }
 
-main
-{
+main {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     flex-wrap: wrap;
+
 
 }
 
-img
-{
+img {
     min-width: 240px;
     max-height: 375px;
 }
-figure
-{
-    color:white;
+
+.books {
+    color: white;
     width: 240px;
     border: 1px white solid;
     padding: 12px;
 }
-figure:hover
-{
+
+.books:hover {
     background-color: black;
-    border: 2px solid yellow;
+    border-color: yellow;
     box-shadow: 5px 1px 0;
-    padding-bottom: 2px;
 }
-figcaption
-{
+
+figcaption {
     text-align: center;
 }
-footer{
-    position: absolute;
+
+footer {
+    position: relative;
     bottom: 0;
     left: 5%;
     padding-left: 20px;
     color: white;
     width: 90%;
 
+}
+
+#logo {
+    min-width: 300px;
+    max-height: 300px;
+
+}
+
+#picture {
+
+    width: 100%;
+    height: 300px;
+    display: flex;
+    justify-content: center;
+}
+
+#figure_logo {
+    margin: 0;
 }
