--- a/LogIn.css
+++ b/LogIn.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Tahoma, serif;
+    font-family: 'Roboto Thin', sans-serif;
     margin: 0;
     padding: 0;
     width: 100vw;
@@ -74,3 +74,4 @@ button:hover {
     font-weight: bold;
     transform: scale(1.1);
 }
+
