--- a/index.css
+++ b/index.css
@@ -41,9 +41,11 @@ body{
     align-items: center;
     background-image: url("Images/Фон.jpg");
     background-repeat: no-repeat;
+    min-height: 100vh;
 }
 
 main {
+    flex-grow: 1;
     background-image: url("Images/Книги.jpg");
     background-repeat: no-repeat;
     background-size: 100vw auto;
@@ -78,22 +80,36 @@ p
 {
     display: flex;
     align-items: center;
-    height: 30%;
+    min-height: 80%;
     color: white;
     font-size: 4em;
     padding-left: 25px;
 }
+
 footer{
-    position: absolute;
-    bottom: 0;
     left: 5%;
     padding-left: 20px;
     color: white;
     width: 90%;
 }
+
 img
 {
-    height: 720px;
-    width: 560px;
+    min-width: 300px;
+    max-height: 300px;
+
 }
+#picture
+{
+
+    width: 100%;
+    height: 300px;
+    display: flex;
+    justify-content: center;
+}
+figure
+{
+    margin: 0;
+}
+
 
